--- a/index.html
+++ b/index.html
@@ -116,41 +116,16 @@
         </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-------------services--------------------->
     <div id="services">
         <div class="container">
             <h1 class="sub-title">My Services</h1>
             <div class="services-list">
                 <div>
-
-                    <i class="fa-solid fa-broom"></i>
-                    <i class="fa-solid fa-microchip"></i>
-                    <h2>Data Processing</h2>
-                    <p>In this process we first do Fixing or removing incorrect,corrupted, incorrectly formated, duplicate, or in complete data within dataset.
-                        and then 
+                    <h2>Exploratory data analysis (EDA)</h2>
+                    <p>The process of investigating, organizing, and analyzing datasets and summarizing their main characteristics, often employing data wrangling and visualization methods.
                         </p>
-                    <a href="#">learn more</a>
+                    <a href="EDA_process.html">learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-searchengin"></i>
