--- a/EDA_process.html
+++ b/EDA_process.html
@@ -30,7 +30,7 @@
             <div>
                 <h2>Step-01 <br>Discovering</h2>
                 <p>You check out the overall shape,size and content of the dataset. You find it is short on data.</p>
-                <a href="#">learn more</a>
+                <a href="EDA/Explore01-01.html">learn more</a>
             </div>
             <div>
                 <h2>Step-02 <br>Joining</h2>
