--- a/EDA/Explore01-01.html
+++ b/EDA/Explore01-01.html
@@ -3,7 +3,9 @@
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Discover</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<script src="https://kit.fontawesome.com/32123e2356.js" crossorigin="anonymous"></script>
+<title>Explore01-01</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -7472,9 +7474,64 @@ a.anchor-link {
     display: inline-block;
     white-space: normal;
   }
+  /*---------------scroolNav-----------------*/
+html{
+    scroll-behavior: smooth;
+}
+#progress{
+    
+    position: fixed;
+    bottom: 20px;
+    right: 10px;
+    height: 70px;
+    width: 70px;
+    display: none;
+    place-items: center;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(184, 8, 37, 0.6);
+    cursor: pointer;
+}
+#progress-value{
+    display: block;
+    height: calc(100% - 15px);
+    width: calc(100% - 15px);
+    background-color: #fff;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    font-size: 35px;
+    color: #000000;
+}
 </style>
+
 <!-- End of mermaid configuration --></head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
+<div id="progress">
+    <span id="progress-value"><i class="fa-solid fa-chevron-up"></i></span>
+</div>
+<script>
+  let calScrollValue = () => {
+let scrollProgress = document.getElementById("progress");
+let progressValue = document.getElementById("progress-value");
+let pos = document.documentElement.scrollTop;
+
+let calcHeight = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+let scrollValue = Math.round((pos * 100)/calcHeight);
+if(pos>100){
+  scrollProgress.style.display = "grid";
+}
+else{
+  scrollProgress.style.display = "none"
+}
+scrollProgress.addEventListener("click",() => {
+  document.documentElement.scrollTop = 0;
+
+});
+scrollProgress.style.background = `conic-gradient(#ff004f ${scrollValue}%, #d7d7d7 ${scrollValue}%)`;
+};
+window.onscroll = calScrollValue;
+window.onload = calScrollValue;
+</script>
 <main>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper" tabindex="0">
