--- a/index.html
+++ b/index.html
@@ -146,6 +146,46 @@
                     <a href="#">learn more</a>
                 </div>
             </div>
+
+                    <div class="activity">
+            <h1 class="sub-title">My Activities</h1>
+            <div id="Itemselector">
+            <h1 style="padding-top: 30px;">Item selector application</h1>
+            <p style="padding-top: 20px;">In day-to-day life, we all face problems, like decision-making, optimization problems,
+                 and so on. When we consider a shop, operation research allows us to make maintenance
+                  policies, preventive maintenance, maintaining crew size and so many applications. At this
+                   time, we are considering, an application of goal programming in any kind of shop. For
+                    example, we are considering a computer shop and they have a lot of items in the shop 
+                    so some customers can't select the best matching item as he or she wishes and the employee
+                     also face a big problem so we created a goal programming application to overcome
+                      this problem. Customers can give goals and priorities for the goals and the application
+                       return all the products that achieve the goals with consideration of the priorities.
+                        For example, we apply the application to select the best laptop for the customer that
+                         fits the budget, goals with priorities, and goals that are,</p> <br>
+            <ul style="padding-top: 20px;padding-right: 30px;">
+                <li>RAM memory in gigabytes</li>
+                <li>Storage</li>
+                <li>Processor benchmark</li>
+                <li>GPU benchmark</li>
+            </ul>
+            <a href="./downfiles/Laptop select.zip" download class="btn btn2">Download files</a>
+            </div>
+
+            <div id="Mealselector">
+                <h1 style="padding-top: 30px;">Meal selector application</h1>
+                <p style="padding-top: 20px;">In day-to-day life, we all face problems, like decision-making, optimization problems,
+                     and so on. When we consider a shop, operation research allows us to make maintenance
+                      policies, preventive maintenance, maintain crew size and so many applications. At this
+                       time, we are considering, an application of goal programming in any kind of shop. For
+                        example, we are considering a canteen and they have a lot of food categories in the shop 
+                        so some customers can't select the best combination of meals to achieve their daily nutrition
+                         so we create a goal programming application to overcome
+                          this problem. Customer can give goals and priorities for the goals and the application
+                           return the best meal combination with consideration of the priorities.</p> <br>
+                <a href="./downfiles/Meal_Selector x64 V0.0.0.exe" download class="btn btn2">Download files</a>
+                </div>
+
+        </div>
         </div>
     </div>
     <!-------------portfolio------------------------->
@@ -158,7 +198,7 @@
                     <img src="images/work-11.jpg" alt="w1">
                     <div class="layer">
                         <h3>Image Classifier</h3>
-                        <p>This application can identify specific pattern in a photo and identify the object
+                        <p>This application can identify specific patterns in a photo and identify the object
                         </p>
                         <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
@@ -167,7 +207,7 @@
                     <img src="images/work-2.jpg" alt="w1">
                     <img src="images/work-22.png" alt="w1">
                     <div class="layer">
-                        <h3>ML model for predict the market prices</h3>
+                        <h3>ML model for predicting the market prices</h3>
                         <p>
                             This application can identify market trends and accurately predict future prices.
                         </p>
