--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <li>Processor benchmark</li>
                 <li>GPU benchmark</li>
             </ul>
-            <a href="./downfiles/Laptop select.zip" download class="btn btn2">Download files</a>
+            <a href="downfiles/Laptop select.zip" download class="btn btn2">Download files</a>
             </div>
 
             <div id="Mealselector">
@@ -182,7 +182,7 @@
                          so we create a goal programming application to overcome
                           this problem. Customer can give goals and priorities for the goals and the application
                            return the best meal combination with consideration of the priorities.</p> <br>
-                <a href="./downfiles/Meal_Selector x64 V0.0.0.exe" download class="btn btn2">Download files</a>
+                <a href="downfiles/Meal_Selector x64 V0.0.0.exe" download class="btn btn2">Download files</a>
                 </div>
 
         </div>
