--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Sriyantha Sadaruwan">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="logo.png">
+    <meta property="og:url" content="https://sadaruwansri.github.io/DoubleSS/">
+    <meta property="og:description" content="Hi! I'm a data analyst.">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="Sadaruwan">
     <title>Sadaruwan</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/32123e2356.js" crossorigin="anonymous"></script>
