--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Sriyantha Sadaruwan">
+    <meta name="keywords" content="Sriyantha,sriyantha,sadaruwan,datascientist,uor,ruhuna,Sri,Sriyantha,Sadaruwan,FMIS,Financial mathematics">
     <meta property="og:type" content="website">
     <meta property="og:image" content="logo.png">
     <meta property="og:url" content="https://sadaruwansri.github.io/DoubleSS/">
